--- a/styles.css
+++ b/styles.css
@@ -51,6 +51,7 @@ button{
 }
 
 
+/*footer*/
 footer{
     position: fixed;
     left: 0;
@@ -62,4 +63,10 @@ footer{
     gap: 10px;
     font-size: 20px;
     background-color: #7fffd4;
+}
+
+
+svg{
+    font-size: 22px;
+    color: black;
 }
