--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,16 @@
-body{
+body {
     background-color: #0000000d;
     margin: 0;
 }
 
 
-
-main{
+main {
     width: 100vw;
     height: 100vh;
 }
 
 
-.flex-container{
+.flex-container {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
@@ -27,50 +26,52 @@ main{
 }
 
 
-
-.display{
+.display {
     width: 280px;
     height: 70px;
     border: 1px solid black;
     font-size: 50px;
 }
 
-button{
+
+button {
     width: 70px;
     height: 70px;
 }
 
 
-
-.clear{
-    width: 140px;
-}
-
-.equals{
+.clear {
     width: 140px;
 }
 
 
-/*footer*/
-footer{
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 1440px;
-    gap: 10px;
-    font-size: 20px;
-    background-color: #7fffd4;
+.equals {
+    width: 140px;
 }
 
 
-svg{
+@media screen and (max-width: 2560px) {
+    footer {
+        width: 100%;
+        position: fixed;
+        left: 0;
+        bottom: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+        font-size: 20px;
+        background-color: #7fffd4;
+    }
+}
+
+
+svg {
     font-size: 22px;
     color: black;
 }
 
-svg:hover{
+
+svg:hover {
     color: gray;
 }
